java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testTryWrapper2-hints.pass
Add throws clause for java.io.FileNotFoundException
Surround with try-catch
